applications/group-a/order/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app.kubernetes.io/name: order
    app.kubernetes.io/instance: order
    app.kubernetes.io/component: service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: order
      app.kubernetes.io/instance: order
      app.kubernetes.io/component: service
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: order
        app.kubernetes.io/instance: order
        app.kubernetes.io/component: service
    spec:
      containers:
        - name: order
          image: registry.hochschule-burgenland.muehlbachler.xyz/swm2-ws2025-group-a-order/order:v1.1.0
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 512Mi
      imagePullSecrets:
        - name: registry-credentials
