applications/group-a/order/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: order
  labels:
    app.kubernetes.io/name: order
    app.kubernetes.io/instance: order
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: order
    app.kubernetes.io/instance: order
    app.kubernetes.io/component: service
